backend/internal/architecture/testdata/invalid/internal/platform/grouped_embed.go
package platform

import "embed"

var (
	//go:embed asset.txt
	embedded embed.FS
	singleton = map[string]string{}
)
